# Ball-Physics

./: CMakeLists.txt  README.md
src/: ball.cpp  ball.h  main.cpp  utils.cpp  utils.h
